Make it possible to extract a keyword URL from a search engine b=441882 r=IanN